Added DES algorithm instead AES